<resources>
    <string name="app_name">MOBV Zadanie</string>
    <string name="mapa">Mapa</string>
    <string name="zoznam">Zoznam</string>
    <string name="profil">Profil</string>
    <string name="user_profile">Profil používateľa</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZG9zdGFsa292YSIsImEiOiJjbWhrb2JnMjYxcnhvMmlyNGRrYWlxcndsIn0.dlhrrTNFCJTuNW0jcQ_Lmw</string>
    <string name="login_title">Prihlásenie</string>
    <string name="register_title">Registracia</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Zadajte email</string>
    <string name="username_label">Meno</string>
    <string name="username_hint">Zadajte meno</string>
    <string name="password_label">Heslo</string>
    <string name="password_hint">Zadajte heslo</string>
    <string name="login_button">Prihlásiť sa</string>
    <string name="login_prompt">Už máte účet?</string>
    <string name="register_prompt">Ešte nemáte účet?</string>
    <string name="register_button">Zaregistrovať sa</string>
    <string name="logout_button">Odhlásiť sa</string>
    <string name="empty_username">Používateľské meno nemôže byť prázdne</string>
    <string name="empty_email">Email nemôže byť prázdny</string>
    <string name="empty_password">Heslo nemôže byť prázdne</string>
    <string name="email_exists">Email už existuje</string>
    <string name="user_exists">Používateľské meno už existuje</string>
    <string name="register_success">Registrácia bola úspešná! Môžete sa prihlásiť.</string>
    <string name="register_fail">Nepodarilo sa vytvoriť používateľa</string>
    <string name="user_not_found">Nenašiel sa žiadny používateľ s týmto emailom</string>
    <string name="login_success">Prihlásenie úspešné</string>
    <string name="login_fail">Chybné údaje</string>
    <string name="login_error">Nepodarilo sa prihlásiť.</string>
    <string name="get_users_fail">Nepodarilo sa získať používateľov</string>
    <string name="logout_snackbar">You were successfully signed out</string>
    <string name="feed_title">Zoznam používateľov</string>
</resources>